added ulauncher and minor changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = kitty -e yazi
-$menu = wofi --show drun --allow-images
+$menu = ulauncher
 
 #################
 ### AUTOSTART ###
@@ -288,8 +288,9 @@ windowrule = float, confirmreset
 windowrule = float, title:Open File
 windowrule = float, title:branchdialog
 windowrule = float, Lxappearance
-windowrule = float, wofi
-windowrule = animation none, wofi
+windowrule = float, $menu
+windowrule = bordersize 0, $menu
+windowrule = animation none, $menu
 windowrule = float, viewnior
 windowrule = float, pavucontrol-qt
 windowrule = float, pavucontrol
