--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = es
 folder = ~/Images/Wallpapers
-wallpaper = ~/Images/Wallpapers/IMG_9148.gif
+wallpaper = ~/Images/Wallpapers/wallhaven-nmrr1y.png
 backend = swww
 monitors = All
 fill = Fill
