--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -271,13 +271,14 @@ bind = ALT, Print, exec, grimblast --notify --cursor copysave screen
 
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-workspace = special:magic, on-created-empty:[float; size 600 350; animation slide left; xray on]kitty
+workspace = special:magic, on-created-empty:hyprctl dispatch exec "kitty --title float"
 
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 
 # Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+windowrulev2 = float, class:^(kitty)$,title:^(float)$
+windowrulev2 = size 600 350, class:^(kitty)$,title:^(float)$
 windowrule = float, file_progress
 windowrule = float, confirm
 windowrule = float, dialog
