added progs and configs
added udiskie and exec-once on hyprland config
added ulauncher to README.md
added fastfetch config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -60,6 +60,7 @@ $menu = ulauncher
 # exec-once = waybar & hyprpaper
 exec-once = wl-clipboard-history -t
 exec-once = waypaper --restore
+exec-once = udiskie
 
 #############################
 ### ENVIRONMENT VARIABLES ###
