--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,10 +21,10 @@
 ###  NVIDIA  ###
 ################
 
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = XDG_SESSION_TYPE,wayland
+# env = GBM_BACKEND,nvidia-drm
+# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 cursor {
     no_hardware_cursors = true
@@ -59,6 +59,7 @@ $menu = ulauncher
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper
 exec-once = wl-clipboard-history -t
+exec-once = waybar
 exec-once = waypaper --restore
 exec-once = udiskie
 
