--- a/.config/yazi/yazi.toml
+++ b/.config/yazi/yazi.toml
@@ -26,7 +26,7 @@ ueberzug_offset = [ 0, 0, 0, 0 ]
 
 [opener]
 edit = [
-	{ run = '${EDITOR:=emacs} "$@"', desc = "$EDITOR", block = true, for = "unix" },
+	{ run = '${EDITOR:=code} "$@"', desc = "$EDITOR", block = true, for = "unix" },
 ]
 open = [
 	{ run = 'xdg-open "$@"',                desc = "Open", for = "linux" },
@@ -116,7 +116,7 @@ cd_origin = "top-center"
 cd_offset = [ 0, 2, 50, 3 ]
 
 # create
-create_title  = "Create:"
+create_title  = ["Create:", ""]
 create_origin = "top-center"
 create_offset = [ 0, 2, 50, 3 ]
 
