fix: hyprland rulev2 update (wip)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,10 +21,10 @@
 ###  NVIDIA  ###
 ################
 
-# env = LIBVA_DRIVER_NAME,nvidia
-# env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia-drm
-# env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 cursor {
     no_hardware_cursors = true
@@ -204,6 +204,9 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# Hide waybar
+bind = $mainMod, O, exec, killall -SIGUSR1 waybar
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, X, exec, $terminal
 bind = $mainMod, ESCAPE, killactive,
@@ -276,37 +279,27 @@ bind = ALT, Print, exec, grimblast --notify --cursor copysave screen
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 workspace = special:magic, on-created-empty:hyprctl dispatch exec "kitty --title float"
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
 # Example windowrule v2
-windowrulev2 = float, class:^(kitty)$,title:^(float)$
-windowrulev2 = size 600 350, class:^(kitty)$,title:^(float)$
-windowrule = float, file_progress
-windowrule = float, confirm
-windowrule = float, dialog
-windowrule = float, download
-windowrule = float, notification
-windowrule = float, error
-windowrule = float, splash
-windowrule = float, confirmreset
-windowrule = float, title:Open File
-windowrule = float, title:branchdialog
-windowrule = float, Lxappearance
-windowrule = float, $menu
-windowrule = bordersize 0, $menu
-windowrule = animation none, $menu
-windowrule = float, viewnior
-windowrule = float, pavucontrol-qt
-windowrule = float, pavucontrol
-windowrule = float, file-roller
-windowrule = fullscreen, wlogout
-windowrule = float, title:wlogout
-windowrule = fullscreen, title:wlogout
-windowrule = idleinhibit focus, mpv
+windowrule = float, class:^(kitty)$,title:^(float)$
+windowrule = size 600 350, class:^(kitty)$,title:^(float)$
+windowrule = float, title:^(file_progress)$
+windowrule = float, title:^(confirm)$
+windowrule = float, title:^(dialog)$
+windowrule = float, title:^(download)$
+windowrule = float, title:^(notification)$
+windowrule = float, title:^(error)$
+windowrule = float, title:^(splash)$
+windowrule = float, title:^(confirmreset)$
+windowrule = float, title:^(Open File)$:
+windowrule = float, title:^(branchdialog)$:
+windowrule = float, title:^(Lxappearance)$
+windowrule = float, title:^(viewnior)$
+windowrule = float, class:^(pavucontrol-qt)$
+windowrule = float, class:^(pavucontrol)$
+windowrule = float, title:^(file-roller)$
+windowrule = fullscreen, title:^(wlogout)$
 windowrule = float, title:^(Media viewer)$
 windowrule = float, title:^(Volume Control)$
 windowrule = float, title:^(Picture-in-Picture)$
-windowrule = size 800 600, title:^(Volume Control)$
 windowrule = move 75 44%, title:^(Volume Control)$
-windowrulev2 = suppressevent maximize, class:.*
+windowrule = size 800 600, title:^(Volume Control)$
