--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = kitty -e yazi
-$menu = ulauncher
+$menu = walker
 
 #################
 ### AUTOSTART ###
@@ -62,6 +62,7 @@ exec-once = wl-clipboard-history -t
 exec-once = waybar
 exec-once = waypaper --restore
 exec-once = udiskie
+exec-once = walker --gapplication-service
 
 #############################
 ### ENVIRONMENT VARIABLES ###
